# sanicdns

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Dockerfile.build_static  LICENSE  NOTICE.txt  README.Docker.md  compose.yaml  install.sh  readme.md  run_clang_format.sh
.github/workflows/: build_static.yaml  build_static_release.yaml  publish_docs.yaml  run_tests.yaml
benchmark/: CMakeLists.txt
benchmark/clocks/: CMakeLists.txt  clocks_benchmark.cc
benchmark/dns_packet_constructor/: CMakeLists.txt  dns_construct_helpers_benchmark.cc  dns_packet_constructor_benchmark.cc
benchmark/dns_packet_parser/: CMakeLists.txt  dns_packet_parser_benchmark.cc  dns_parse_helpers_benchmark.cc
benchmark/input_processor/: CMakeLists.txt  input_reader_benchmark.cc
benchmark/pointers/: CMakeLists.txt  pointers_benchmark.cc
ci/: clang-toolchain.cmake  gcc-toolchain.cmake
cmake/: GenerateVersion.cmake
cmake/modules/: FindLibBpf.cmake  FindNUMA.cmake  Finddpdk.cmake
config/: hosts_example.yml  kernel-update-playbook.yml  playbook.yml  readme.md
docs/: CMakeLists.txt  Doxyfile.in  app.yaml
docs/source/: compiling_from_source.rst  conf.py  getting_started.rst  index.rst  requirements.txt  technical_overview.rst
include/: arp.h  dns_construct_helpers.h  dns_json_defs.h  dns_packet.h  dns_packet_constructor.h  dns_struct_defs.h  eth_rxtx.h  eth_rxtx_opts.h  input_reader.h  net_info.h  scanner_config.h  thread_manager.h  version.h.in  worker.h
src/: arp.cpp  dns_packet.cpp  eth_rxtx.cpp  input_reader.cpp  main.cpp  main.cpp.rej  net_info.cpp  worker.cpp
test/: CMakeLists.txt  arp_test.cc  dns_construct_helpers_test.cc  dns_packet_constructor_test.cc  dns_packet_test.cc  dpdk_wrappers_test.cc  input_reader_test.cc  net_info_test.cc  test_main.cc  thread_manager_test.cc  utils_test.cc
test/resources/: CMakeLists.txt  resolvers_bad.txt  resolvers_good.txt
utils/: ProgramOptions.hxx  counters.h  dns_format.h  dpdk_wrappers.h  encode_dns_char_string.h  expected.h  expected_helpers.h  fixed_name.hpp  fmt_helpers.h  intrusive_list.h  network_types.h  parse_helpers.h  request.h
xdp/: CMakeLists.txt
xdp/src/: sanicdns_xdp.c
